syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "ShipmentExtraProto";
option objc_class_prefix = "ShipmentExtra";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";

// Delivery
message DeliveryData {
    option (routines.entity_type) = "Delivery";
    option (routines.keys).keys = "delivery_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: deliveryId
    // fields
        
    string delivery_id = 1 [json_name = "delivery_id"];    
    string origin_facility_id = 2 [json_name = "origin_facility_id"];    
    string dest_facility_id = 3 [json_name = "dest_facility_id"];    
    google.protobuf.Timestamp actual_start_date = 4 [json_name = "actual_start_date"];    
    google.protobuf.Timestamp actual_arrival_date = 5 [json_name = "actual_arrival_date"];    
    google.protobuf.Timestamp estimated_start_date = 6 [json_name = "estimated_start_date"];    
    google.protobuf.Timestamp estimated_arrival_date = 7 [json_name = "estimated_arrival_date"];    
    string fixed_asset_id = 8 [json_name = "fixed_asset_id"];    
    routines.FixedPoint start_mileage = 9 [json_name = "start_mileage"];    
    routines.FixedPoint end_mileage = 10 [json_name = "end_mileage"];    
    routines.FixedPoint fuel_used = 11 [json_name = "fuel_used"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 12 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 13 [json_name = "created_tx_stamp"];
        

    // extra
    google.protobuf.Struct extra = 18;
    map<string, google.protobuf.Any> attachments = 19;
}


message DeliveryList{
    repeated DeliveryData values=1;
}


// Shipment Attribute
message ShipmentAttributeData {
    option (routines.entity_type) = "ShipmentAttribute";
    option (routines.keys).keys = "shipment_id, attr_name";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: shipmentId, attrName
    // fields
        
    string shipment_id = 1 [json_name = "shipment_id"];    
    string attr_name = 2 [json_name = "attr_name"];    
    string attr_value = 3 [json_name = "attr_value"];    
    string attr_description = 4 [json_name = "attr_description"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 6 [json_name = "created_tx_stamp"];    
    string id = 7 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 9;
    map<string, google.protobuf.Any> attachments = 10;
}


message ShipmentAttributeList{
    repeated ShipmentAttributeData values=1;
}


// Shipment Contact Mechanism
message ShipmentContactMechData {
    option (routines.entity_type) = "ShipmentContactMech";
    option (routines.keys).keys = "shipment_id, shipment_contact_mech_type_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: shipmentId, shipmentContactMechTypeId
    // fields
        
    string shipment_id = 1 [json_name = "shipment_id"];
    string shipment_contact_mech_type_id = 2 [json_name = "shipment_contact_mech_type_id"]; // ShipmentContactMechType    
    string contact_mech_id = 3 [json_name = "contact_mech_id"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 5 [json_name = "created_tx_stamp"];    
    string id = 6 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 9;
    map<string, google.protobuf.Any> attachments = 10;
}


message ShipmentContactMechList{
    repeated ShipmentContactMechData values=1;
}


// Shipment Item Feature
message ShipmentItemFeatureData {
    option (routines.entity_type) = "ShipmentItemFeature";
    option (routines.keys).keys = "shipment_id, shipment_item_seq_id, product_feature_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: shipmentId, shipmentItemSeqId, productFeatureId
    // fields
        
    string shipment_id = 1 [json_name = "shipment_id"];    
    string shipment_item_seq_id = 2 [json_name = "shipment_item_seq_id"];    
    string product_feature_id = 3 [json_name = "product_feature_id"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 5 [json_name = "created_tx_stamp"];    
    string id = 6 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message ShipmentItemFeatureList{
    repeated ShipmentItemFeatureData values=1;
}


// Shipment Type Attribute
message ShipmentTypeAttrData {
    option (routines.entity_type) = "ShipmentTypeAttr";
    option (routines.keys).keys = "shipment_type_id, attr_name";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: shipmentTypeId, attrName
    // fields
        
    string shipment_type_id = 1 [json_name = "shipment_type_id"];    
    string attr_name = 2 [json_name = "attr_name"];    
    string description = 3 [json_name = "description"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 5 [json_name = "created_tx_stamp"];    
    string id = 6 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 8;
    map<string, google.protobuf.Any> attachments = 9;
}


message ShipmentTypeAttrList{
    repeated ShipmentTypeAttrData values=1;
}


// Shipping Document
message ShippingDocumentData {
    option (routines.entity_type) = "ShippingDocument";
    option (routines.keys).keys = "document_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: documentId
    // fields
        
    string document_id = 1 [json_name = "document_id"];    
    string shipment_id = 2 [json_name = "shipment_id"];    
    string shipment_item_seq_id = 3 [json_name = "shipment_item_seq_id"];    
    string shipment_package_seq_id = 4 [json_name = "shipment_package_seq_id"];    
    string description = 5 [json_name = "description"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 7 [json_name = "created_tx_stamp"];
        

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message ShippingDocumentList{
    repeated ShippingDocumentData values=1;
}


